# sphero-vem

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst  installation.rst  pipeline.rst
docs/api/: denoising.rst  index.rst  io.rst  measure.rst  metrics.rst  preprocessing.rst  registration.rst  segmentation.rst  utils.rst
notebooks/: alignment.ipynb  cellpose.ipynb  cellpose_downscaled.ipynb  cellpose_finetuning.ipynb  cellpose_plots.ipynb  denoising.ipynb  denoising_plots.ipynb  exploratory_analysis.ipynb  extract_metadata.ipynb  hd5_trials.ipynb  lightning_trials.ipynb  masks_analysis_plots.ipynb  metadata.ipynb  noise2void.ipynb  np_segmentation.ipynb  np_segmentation_plots.ipynb  registration_plots.ipynb  scopem_analysis.ipynb  volume-em-preprocessing.ipynb
scripts/: checkpoint_explorer.py  downscale_tiles.py  exclude_tiles.py  noise2void_train.py  rename_tiles.py
scripts/analysis/: analysis_all.sh  cell_shape.py  mask_analysis.py  nps_distance.py  nuclei_distance.py
scripts/benchmarks/: benchmark_denoising.py  benchmark_downscale.py  benchmark_gpu.py  benchmark_io.py  benchmark_timing.py
scripts/denoising/: downscale_denoised.py  noise2void_predict.py  noise2void_train.py  noise2void_zarr.py  noise2void_zarr_predict.py
scripts/labeling/: labeling_aligned.py  labeling_downscale.py  labeling_split.py  labeling_virtual.py
scripts/legacy/: README.md  cellpose_downscaling.py  cellpose_predict_batch.py  cellpose_seg_sweep.py  cellpose_stack_eval.py  downscale_denoised.py  labeling_virtual.py
scripts/registration/: crop_registered.py  downscale_aligned.py  ncc_original.py  register_pytorch.py  register_stack.py
scripts/segmentation/: cellpose_2d.py  cellpose_all.sh  cellpose_cleanup.py  cellpose_downscaling.py  cellpose_eval.py  cellpose_finetuning.py  cellpose_finetuning_cells.py  cellpose_flows.py  cellpose_masks.py  cellpose_postprocess.py  cellpose_predict_batch.py  cellpose_pretrained.py  cellpose_seg_batch.sh  cellpose_stack.py  cellpose_stack_eval.py  cellpose_train_batch.sh  cellpose_upsample.py  clean_cell_flows.py  cleanup_segmentation.py  coregister_labels.py  merge_labels.py  np_crop_batch.py  np_downsample_posterior.py  np_segmentation.py  np_stack.py  np_threshold.py  patch_crop_batch.py  upsample_cellpose.py
scripts/utility/: checkpoint_explorer.py  cleanup_mac_metadata.sh  downscale_tiles.py  exclude_tiles.py  extract_metadata.py  merge_stack.py  multiscales_2d.py  rename_tiles.py  repair_multiscales.py  resample_array.py  stack_to_zarr.py
src/sphero_vem/: __init__.py  denoising.py  io.py  measure.py  metrics.py  postprocessing.py  preprocessing.py  registration.py  segmentation.py  segmentation_np.py  utils.py
src/sphero_vem/measure/: __init__.py  distance.py  fractal.py  mesh.py  pipeline.py  sdf.py  voxel.py
src/sphero_vem/registration/: __init__.py  core.py  cropping.py  transforms.py
src/sphero_vem/segmentation/: __init__.py
src/sphero_vem/segmentation/cellpose/: __init__.py  core.py  evaluation.py  finetuning.py  postptocessing.py  utils.py
src/sphero_vem/segmentation/np/: __init__.py  core.py  utils.py
src/sphero_vem/utils/: __init__.py  accelerator.py  config.py  logging.py  misc.py
tests/: test_config.py  test_preprocessing.py  test_utils.py
