[project]
name = "sphero-vem"
version = "0.1.0"
description = ""
authors = [
    {name = "dv-bt",email = "d.bottone@pm.me"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.0.0,<3.0.0)",
    "zarr (>=3.0.0,<4.0.0)",
    "torch (>=2.0.0,<2.7.0)",
    "torchvision (>=0.15.0,<0.22.0)",
    "careamics (>=0.0.9)",
    "kornia (>=0.8.0,<0.9.0)",
    "lightning (>=2.5.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "cellpose (>=4.0.3,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "dask-image (>=2025.11.0,<2026.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "polars (>=1.39.2,<2.0.0)",
    "wandb (>=0.19.10,<0.20.0)",
]


[project.optional-dependencies]
cuda = [
    "cupy-cuda12x>=13.6.0,<14.0.0",
    "cucim-cu12>=25.12.0,<26.0.0",
]


[tool.poetry]
packages = [{include = "sphero_vem", from = "src"}]


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"
ipympl = "^0.9.7"
seaborn = "^0.13.2"
statannotations = ">=0.7.2,<0.8.0"
statsmodels = ">=0.14.6,<0.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.4"
pre-commit = "^4.2.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.0"
pydata-sphinx-theme = "^0.16.0"
sphinx-autodoc-typehints = "^3.0.0"



[tool.poetry.group.napari.dependencies]
napari = {extras = ["pyqt6"], version = "^0.6.6"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
